--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 #requirements.txt
 snowflake-snowpark-python
-streamlit
+streamlit>=1.31
+snowflake-connector-python>=3.7
+snowflake-snowpark-python>=1.15
